# fileObserver

./: README.md
Tools/: gradle.properties  settings.gradle
Tools/app/: build.gradle
Tools/app/src/androidTest/java/com/jiangc/tools/: ExampleInstrumentedTest.java
Tools/app/src/main/: AndroidManifest.xml
Tools/app/src/main/java/com/jiangc/tools/: MainActivity.java
Tools/app/src/test/java/com/jiangc/tools/: ExampleUnitTest.java
Tools/fileobserver/: build.gradle
Tools/fileobserver/src/androidTest/java/com/jiangc/receiver/: ExampleInstrumentedTest.java
Tools/fileobserver/src/main/: AndroidManifest.xml
Tools/fileobserver/src/main/cpp/: CMakeLists.txt  err.h  fileObserver.c
Tools/fileobserver/src/main/java/com/jiangc/receiver/: FileObserverJni.java
Tools/fileobserver/src/main/jni/: Application.mk
Tools/fileobserver/src/main/jni/fileObserver/: Android.mk
Tools/fileobserver/src/main/jni/fileObserver/src/: fileObserver.c
Tools/fileobserver/src/main/res/values/: strings.xml
Tools/fileobserver/src/test/java/com/jiangc/receiver/: ExampleUnitTest.java
Tools/gradle/wrapper/: gradle-wrapper.properties
